# poetry-vcs-renovate-repro

./: pyproject.toml
app/: main.py
